# OpenSpace

./: .clangd  .clangd.in  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  checks.json
cmake/: CPM.cmake  PopulateChangeSetVariables.cmake
data/basic/: SM_Capital_001.glb  SM_Cube_x1_y1_z1.glb  SM_DemonShip.glb  SM_Plane_004.glb  SM_Plane_005.glb  fform_1.glb  fform_10.glb  fform_2.glb  fform_3.glb  fform_4.glb  fform_5.glb  fform_6.glb  fform_7.glb  fform_9.glb
data/shaders/: Atmosphere.include.glsl  Atmosphere2.include.glsl  BasicFunctions.include.glsl  BasicTypes.include.glsl  ComposeDeferred.fs.glsl  ComposeDeferred.vs.glsl  ComputeIrradianceMap.cs.glsl  ComputePrefilteredRadianceMap.cs.glsl  ComputeSHCoefficients.cs.glsl  ConvolveTexture.cs.glsl  DebugLines.fs.glsl  DebugLines.vs.glsl  Depth.fs.glsl  DepthPrePass.vs.glsl  FST.GammaCorrected.fs.glsl  FST.fs.glsl  FST.vs.glsl  FXAA.include.glsl  Geometry.fs.glsl  Geometry.vs.glsl  GlobalLight.fs.glsl  GlobalLight.vs.glsl  Include.BasicFunctions.glsl  Include.BasicTypes.glsl  Include.CalculatePrefilteredReflection.glsl  Include.DGgx.glsl  Include.Fresnel.glsl  Include.FresnelSchlick.glsl  Include.GSchlickSmithGgx.glsl  Include.Hammersley.glsl  Include.ObjectBuffer.glsl  Include.Pi.glsl  Include.ReconstructFragmentWorldPositionFromDepth.glsl  Include.SpecularContribution.glsl  Include.Sqr.glsl  Include.VertexTypes.glsl  ObjectBuffer.include.glsl  ResolveDeferred.fs.glsl  ResolveDeferred.vs.glsl  Shadow.fs.glsl  (+8 more)
libs/: CMakeLists.txt  debugbreak.cmake  entt.cmake  fastgltf.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  imguizmo.cmake  jolt.cmake  ktx.cmake  meshoptimizer.cmake  mikktspace.cmake  mimalloc.cmake  parallel-hashmap.cmake  parallelhashmap.cmake  poolstl.cmake  sdl2.cmake  soloud.cmake  spdlog.cmake  stb.cmake  tracy.cmake
src/: Assets.cpp  Assets.hpp  CMakeLists.txt  Components.cpp  Components.hpp  Controls.hpp  Core.hpp  Flag.hpp  FrameTimer.cpp  FrameTimer.hpp  Game.cpp  GameHost.cpp  GameHost.hpp  Helpers.cpp  Helpers.hpp  Images.cpp  Images.hpp  Input.hpp  Io.cpp  Io.hpp  Key.hpp  Logger.cpp  Logger.hpp  Main.cpp  Module.hpp  NotUsed.cpp  Profiler.hpp  RHI.cpp  RHI.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Version.hpp.in  WindowSettings.hpp
src/Assets/: AssetImage.hpp  AssetImporter.hpp  AssetMaterial.hpp  AssetMesh.hpp  AssetMeshInstance.hpp  AssetModel.hpp  AssetProvider.cpp  AssetProvider.hpp  AssetSampler.hpp  AssetStorage.cpp  AssetStorage.hpp  AssetTexture.hpp  CMakeLists.txt
src/Core/: Core.hpp  Io.hpp  Logger.cpp  Logger.hpp  Module.hpp  Profiler.hpp  Types.hpp
src/Fonts/: CompressedFont-JetBrainsMono-Regular.inl
src/Game/: CMakeLists.txt  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  GameContext.hpp  IGame.hpp  Scene.cpp  Scene.hpp
src/Game/Components/: NameComponent.hpp  ParentComponent.hpp  TransformComponent.hpp
src/Input/: Controls.hpp  Input.cpp  Input.hpp
src/Renderer/: RenderContext.hpp  Renderer.cpp  Renderer.hpp
src/Renderer/RHI/: RHI.cpp  RHI.hpp
